@@ -126,3 +126,5 @@ invalidAccount=Invalid Username/Password
 invalidUser=User not set up in ART
 mailCc=Cc
 mailBcc=Bcc
+invalidSession=Invalid session
+maxRunnningQueriesReached=Maximum number of running queries reached
