@@ -164,3 +164,5 @@ invalidConnection=Connection to the ART Repository is not available.
 invalidUser=User not set up in ART
 mailCc=Cc
 mailBcc=Bcc
+invalidSession=Invalid session
+maxRunnningQueriesReached=Maximum number of running queries reached
