@@ -25,7 +25,6 @@ import java.io.IOException;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
-import java.sql.SQLException;
 import java.util.ResourceBundle;
 import javax.servlet.*;
 import javax.servlet.http.HttpServletRequest;
