@@ -1,0 +1,197 @@
+/*
+ * Display logging info generated by application (logback logs)
+ * Code mainly from logback-demo ViewLastLog.java
+ */
+package art.servlets;
+
+import art.utils.UserEntity;
+import ch.qos.logback.classic.LoggerContext;
+import ch.qos.logback.classic.html.HTMLLayout;
+import ch.qos.logback.classic.html.UrlCssBuilder;
+import ch.qos.logback.classic.spi.ILoggingEvent;
+import ch.qos.logback.classic.spi.LoggingEvent;
+import ch.qos.logback.core.read.CyclicBufferAppender;
+import java.io.IOException;
+import java.io.PrintWriter;
+import java.util.ResourceBundle;
+import javax.servlet.ServletException;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import javax.servlet.http.HttpSession;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+/**
+ *
+ * @author logback project
+ */
+public class ViewLogs extends HttpServlet {
+
+	private static final long serialVersionUID = 1L;
+	Logger logger = LoggerFactory.getLogger(ViewLogs.class);
+	CyclicBufferAppender<ILoggingEvent> cyclicBufferAppender;
+	HTMLLayout layout;
+	static String PATTERN = "%d%level%logger{30}%msg"; //"%d%thread%level%logger{25}%mdc{userid}%msg";
+	private final String CYCLIC_BUFFER_APPENDER_NAME = "CYCLIC"; //name of cyclic appender in logback.xml
+
+	@Override
+	public void init() throws ServletException {
+		LoggerContext lc = (LoggerContext) LoggerFactory.getILoggerFactory();
+		initialize(lc);
+		super.init();
+	}
+
+	void reacquireCBA() {
+		LoggerContext context = (LoggerContext) LoggerFactory.getILoggerFactory();
+		cyclicBufferAppender = (CyclicBufferAppender<ILoggingEvent>) context.getLogger(
+				Logger.ROOT_LOGGER_NAME).getAppender(CYCLIC_BUFFER_APPENDER_NAME);
+	}
+
+	private void printLogs(PrintWriter output) {
+		int count = -1;
+		if (cyclicBufferAppender != null) {
+			count = cyclicBufferAppender.getLength();
+		}
+
+		if (count == -1) {
+			output.append("<tr><td>Failed to locate CyclicBufferAppender</td></tr>\r\n");
+		} else if (count == 0) {
+			output.append("<tr><td>No logging events to display</td></tr>\r\n");
+		} else {
+			LoggingEvent le;
+			for (int i = 0; i < count; i++) {
+				le = (LoggingEvent) cyclicBufferAppender.get(i);
+				output.append(layout.doLayout(le) + "\r\n");
+			}
+		}
+	}
+
+	private void initialize(LoggerContext context) {
+		logger.debug("Initializing ViewLogs Servlet");
+
+		cyclicBufferAppender = (CyclicBufferAppender<ILoggingEvent>) context.getLogger(
+				Logger.ROOT_LOGGER_NAME).getAppender(CYCLIC_BUFFER_APPENDER_NAME);
+
+		layout = new HTMLLayout();
+		layout.setContext(context);
+
+		layout.setPattern(PATTERN);
+		layout.setTitle("ART");
+		layout.start();
+	}
+
+	public boolean isResetResistant() {
+		return false;
+	}
+
+	public void onStop(LoggerContext arg0) {
+	}
+
+	/**
+	 * Processes requests for both HTTP
+	 * <code>GET</code> and
+	 * <code>POST</code> methods.
+	 *
+	 * @param request servlet request
+	 * @param response servlet response
+	 * @throws ServletException if a servlet-specific error occurs
+	 * @throws IOException if an I/O error occurs
+	 */
+	protected void processRequest(HttpServletRequest request, HttpServletResponse response)
+			throws ServletException, IOException {
+		
+		response.setContentType("text/html;charset=UTF-8");
+
+		HttpSession session = request.getSession(true);
+		UserEntity ue = (UserEntity) session.getAttribute("ue");
+		if (ue == null) {
+			//invalid session
+			ResourceBundle messages = ResourceBundle.getBundle("art.i18n.ArtMessages", request.getLocale());
+			String msg = messages.getString("sessionExpired");
+			request.setAttribute("message", msg);
+			String toPage = ArtDBCP.getArtSetting("index_page_default");
+			if (toPage == null || toPage.equals("default")) {
+				toPage = "login";
+			}
+			request.getRequestDispatcher("/" + toPage + ".jsp").forward(request, response);
+		} else if(ue.getAdminLevel()!=100){
+			//only allow full admins to view logs
+			request.getRequestDispatcher("/user/showGroups.jsp").forward(request, response);
+		} else {
+			reacquireCBA();
+			PrintWriter out = response.getWriter();
+			try {
+				UrlCssBuilder cssBuilder = new UrlCssBuilder();
+				cssBuilder.setUrl(request.getContextPath() + "/css/logback.css");
+				layout.setCssBuilder(cssBuilder);
+
+				out.append(layout.getFileHeader());
+				String localRef = request.getContextPath();
+				out.append("<h2>Last logging events</h2>");
+				out.append("<table class=\"nav\">");
+				out.append("<tr><td class=\"sexy\"><a href=\"" + localRef
+						+ "/user/showGroups.jsp\" class=\"sexy\">Main Page</a></td></tr>");
+				out.append("<tr><td class=\"sexy\"><a href=\"#bottom\" class=\"sexy\">Jump to bottom</a></td></tr>");
+				out.append("</table>");
+
+				out.append("<div class=\"content_full\">");
+				out.append(layout.getPresentationHeader());
+
+				printLogs(out);
+
+				out.append(layout.getPresentationFooter());
+				
+				out.append("<a name=\"bottom\" />");
+				out.append("</div>");
+
+				out.append(layout.getFileFooter());
+
+				out.flush();
+			} finally {
+				out.close();
+			}
+		}
+	}
+
+	// <editor-fold defaultstate="collapsed" desc="HttpServlet methods. Click on the + sign on the left to edit the code.">
+	/**
+	 * Handles the HTTP
+	 * <code>GET</code> method.
+	 *
+	 * @param request servlet request
+	 * @param response servlet response
+	 * @throws ServletException if a servlet-specific error occurs
+	 * @throws IOException if an I/O error occurs
+	 */
+	@Override
+	protected void doGet(HttpServletRequest request, HttpServletResponse response)
+			throws ServletException, IOException {
+		processRequest(request, response);
+	}
+
+	/**
+	 * Handles the HTTP
+	 * <code>POST</code> method.
+	 *
+	 * @param request servlet request
+	 * @param response servlet response
+	 * @throws ServletException if a servlet-specific error occurs
+	 * @throws IOException if an I/O error occurs
+	 */
+	@Override
+	protected void doPost(HttpServletRequest request, HttpServletResponse response)
+			throws ServletException, IOException {
+		processRequest(request, response);
+	}
+
+	/**
+	 * Returns a short description of the servlet.
+	 *
+	 * @return a String containing servlet description
+	 */
+	@Override
+	public String getServletInfo() {
+		return "Display logging info generated by application";
+	}// </editor-fold>
+}
