@@ -1,15 +1,0 @@
-<?xml version="1.0" encoding="UTF-8" ?> 
-
-<configuration>
-
-	<appender name="STDOUT" class="ch.qos.logback.core.ConsoleAppender">
-		<layout class="ch.qos.logback.access.PatternLayout">
-			<Pattern>%h %l %u %t \"%r\" %s %b</Pattern>
-		</layout>
-	</appender>
-
-	<!--
-		<appender-ref ref="STDOUT" />
-	-->
-
-</configuration>
