@@ -176,6 +176,10 @@
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    <servlet>
+        <servlet-name>ViewLogs</servlet-name>
+        <servlet-class>art.servlets.ViewLogs</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>CewolfServlet</servlet-name>
         <url-pattern>/portlets/cewolf/*</url-pattern>
@@ -215,10 +219,16 @@
         <url-pattern>/user/ExecuteQuery</url-pattern>
         <url-pattern>/servlet/QueryExecute</url-pattern>
     </servlet-mapping>
+	<servlet-mapping>
+        <servlet-name>ViewLogs</servlet-name>
+        <url-pattern>/logs</url-pattern>
+        <url-pattern>/ViewLogs</url-pattern>
+    </servlet-mapping>
     <!-- Define the default session timeout for your application,
           in minutes.  From a servlet or JSP page, you can modify
           the timeout for a particular session dynamically by using
           HttpSession.getMaxInactiveInterval(). -->
+   
     <session-config>
         <session-timeout>120</session-timeout>
         <!-- 120 minutes -->
