@@ -1,0 +1,134 @@
+/*
+css used to display application logs generated by the logback framework
+code from logback-demo, pk.css, with a few modifications
+*/
+
+body {
+ margin-top: 10px;
+ margin-left: 10px;
+ font-size: large;
+ /*background-image: url(../images/lblogo.jpg);
+ background-repeat: no-repeat;
+ background-position: left top;*/
+}
+
+h2 {
+ text-align: center;
+ margin-top: 1em;
+}
+
+table {
+ margin-left: 2em;
+ margin-right: 2em;
+ /*border-left: 2px solid #AAA;
+  border-right: 2px solid #AAA;*/
+}
+
+div.content {
+ margin-top: 80px;
+ margin-left: 220px;
+}
+
+div.content_full {
+ margin-top: 80px;
+ margin-left: 10px;
+}
+
+div.statiiMenus {
+ width: 300px;
+ /*float: right;*/
+ display: block;
+ padding-top: 40px;
+ padding-left: 20ex;
+ padding-right: 1ex;
+ margin-left: 3em;
+ margin-right: 3em;
+}
+
+table.nav {
+ margin-top: 40px;
+ width: 10em;
+ float: left;
+ overflow: auto;
+}
+
+TR.even {
+ background: #FFFFFF;
+}
+
+TR.odd {
+ background: #EAEAEA;
+}
+
+TR.error {
+ font-weight: bold;
+ color: #FF4040
+}
+
+TD {
+ padding-right: 1ex;
+ padding-left: 1ex;
+ padding-top: 0ex;
+ /*border-right: 2px solid #AAA;*/
+}
+
+TD.Date {
+ text-align: right;
+ font-family: courier, monospace;
+ font-size: smaller;
+}
+
+TD.Thread {
+ text-align: left;
+}
+
+TD.Level {
+ text-align: right;
+}
+
+TD.Logger {
+ text-align: left;
+}
+
+TR.header {
+ background: #596ED5;
+ color: #FFF;
+ font-weight: bold;
+ font-size: larger;
+}
+
+TD.Exception {
+ background: #A2AEE8;
+ font-family: courier, monospace;
+}
+
+TD.sexy {
+ border-top: 2px solid #DDD;
+ border-left: 2px solid #DDD;
+ border-right: 2px solid #888;
+ border-bottom: 2px solid #888;
+}
+
+.red {
+ color: #CC0000;
+}
+
+.orange {
+ color: #FF6600;
+}
+
+A.sexy,INPUT.sexy,span.sexy { /*background: #FFF; */
+ color: #0079C5;
+ font-weight: bold;
+ font-family: sans-serif; 
+ font-size: 14px;
+ white-space: nowrap;
+ padding: 0px 1em 0px 1em;
+ margin: 5px 0px 3px 0px;
+ text-decoration: none;
+}
+
+TD.sexy:hover,A.sexy:hover,INPUT.sexy:hover,INPUT.sexy_hover,span.sexy:hover
+ {
+ background: #E0E0EF;
+}
